# Froggi

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  away  awayName  away_name  config.json  dockerfile  secret
.github/workflows/: autocompile.yml  rust.yml
src/: app.js  app_time.rs  appstate.rs  main.rs  routing.rs  tickers.rs  utility.rs  utility_functions.rs  wrapper.rs
src/html/: chromakey.html  create_login.html  index-football.html  index-generic-sport.html  index.html  login.html  logs.html  overlay.html  settings.html  style.css  styles.css  teaminfo.html
src/html/countdown/: countdown.html
src/html/js/: app.js  htmx.js  index.js  overlay.js  sanitize.js  sse.js  teaminfo.js
src/html/login/: create_login.html  login.html
src/html/logo_upload/: teaminfo.html  upload.html
src/html/scoreboard/: chromakey.html  overlay.html
src/html/sponsors/: sponsors.html
src/html/status_codes/: 404.html
src/html/teaminfo/: teaminfo.html
src/routing/: api.rs  basic.rs  downs.rs  froggi_middleware.rs  login.rs  misc.rs  overlay.rs  popups.rs  sponsors.rs  team.rs  teaminfo.rs  time.rs  updating.rs  visibility.rs  websockets.rs
