[package]
name = "fosso"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 = "0.5.3"
axum = { version = "0.7.4", features = ["multipart"] }
base64 = "0.21.7"
futures = "0.3.30"
futures-util = "0.3.30"
hyper = "1.1.0"
jsonwebtoken = "9.2.0"
lazy_static = "1.4.0"
mime = "0.3.17"
rand = "0.8.5"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
tokio = { version = "1.35.1", features = ["full"] }
uuid = "1.7.0"
