[package]
name = "froggi"
version = "2.0.0"
license = "MIT"
edition = "2021"
default-run = "froggi-worker"

[dependencies]
anyhow = "1.0.86"
argon2 = "0.5.3"
axum = { version = "0.7.5", features = ["macros", "multipart", "tokio", "ws"] }
axum-extra = { version = "0.9.3", features = ["cookie"] }
base64 = "0.22.1"
cookie = "0.18.1"
git2 = "0.19.0"
jsonwebtoken = "9.3.0"
lazy_static = "1.4.0"
nix = { version = "0.29.0", features = ["signal"] }
rand = "0.8.5"
reqwest = "0.12.8"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["full"] }
tokio-stream = "0.1.15"
tower = "0.5.1"
tower-http = { version = "0.5.2", features = ["cors"] }
uuid = { version = "1.8.0", features = ["v4"] }

[[bin]]
name = "froggi"
path = "src/wrapper.rs"

[[bin]]
name = "froggi-worker"
path = "src/main.rs"
